# MULTI-AI-AGENT-PROJECTS

./: .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
app/: main.py
app/backend/: api.py
app/core/: ai_agent.py
app/frontend/: ui.py
custom_jenkins/: Dockerfile
